# pca_board_ros2

./: .gitignore  Makefile  README.md  README_vibecoded.md
i2c_pca_utils/: Makefile  i2c_pca_utils.c  set_servo_angle.c
pca_board_bringup/: CMakeLists.txt  package.xml
pca_board_bringup/include/: i2c_pca_utils.h
pca_board_bringup/launch/: multi_board.launch.py  pca_board.launch.py  single_board.launch.py
pca_board_bringup/src/: i2c_pca_utils.c  pca_board.cpp
pca_board_interfaces/: CMakeLists.txt
pca_board_interfaces/msg/: DutyCyclePercent.msg  MultiServoAngleDeg.msg  PWMFreqHz.msg  ServoAngleDeg.msg
pca_board_interfaces/srv/: ServoState.srv
ros2_workspace/pca_board_interfaces/msg/: ServoAngleDeg.msg
src/pca_board_bringup/: CMakeLists.txt
src/pca_board_bringup/include/: i2c_pca_utils.h
src/pca_board_bringup/launch/: multi_board.launch.py
src/pca_board_bringup/src/: pca_board.cpp
src/pca_board_interfaces/: package.xml
src/pca_board_interfaces/msg/: DutyCyclePercent.msg
